--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,3 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
@@ -14,15 +11,40 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23.1'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23.1'
 
-    - name: Build
-      run: go build -v ./...
+      - name: Build
+        run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+      - name: Test
+        run: go test -v ./...
+
+      # 打包二进制文件
+      - name: Build Binary
+        run: |
+          mkdir -p ./bin
+          GOOS=linux GOARCH=amd64 go build -o ./bin/myapp-linux-amd64 .
+          GOOS=windows GOARCH=amd64 go build -o ./bin/myapp-windows-amd64.exe .
+          GOOS=darwin GOARCH=amd64 go build -o ./bin/myapp-darwin-amd64 .
+
+      # 打包源代码
+      - name: Package Source Code
+        run: |
+          tar -czvf ./bin/myapp-source.tar.gz .
+
+      # 发布二进制文件和源代码到 GitHub Releases
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            ./bin/myapp-linux-amd64
+            ./bin/myapp-windows-amd64.exe
+            ./bin/myapp-darwin-amd64
+            ./bin/myapp-source.tar.gz
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
