--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,10 +25,7 @@ jobs:
       - name: Test
         run: go test -v ./...
 
-
-
-
-        # 打包二进制文件
+      # 打包二进制文件
       - name: Build Binary
         run: |
           mkdir -p ./bin
@@ -36,15 +33,10 @@ jobs:
           GOOS=windows GOARCH=amd64 go build -o ./bin/BronyaBot-windows-amd64.exe .
           GOOS=darwin GOARCH=amd64 go build -o ./bin/BronyaBot-darwin-amd64 .
 
-
-      - name: List files in bin directory
-        run: ls -l ./bin
-
+#      # 打包源代码
 #      - name: Package Source Code
 #        run: |
-#          echo "Packaging source code..."
 #          tar -czvf ./bin/BronyaBot-source.tar.gz .
-      
 
       # 创建 Git 标签
       - name: Create Git Tag
@@ -61,5 +53,6 @@ jobs:
             ./bin/BronyaBot-linux-amd64
             ./bin/BronyaBot-windows-amd64.exe
             ./bin/BronyaBot-darwin-amd64
+#            ./bin/BronyaBot-source.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
