--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -42,15 +42,15 @@ jobs:
       - name: Install dependencies
         run: |
           ls -al
-          cd ./
           go mod tidy
 
       # 构建项目
       - name: Build project
         run: |
           ls -al
-          cd ./..
-          go build -o yatori-go-console
+#          cd ./..
+          go build -v ./...
+#          go build -o yatori-go-console
 
       # 上传二进制文件作为 Artifact
       - name: Upload binary
