--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -58,4 +58,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: myapp-binary
-          path: ./../bin
+          path: ./bin
