--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -125,16 +125,8 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Create GitHub release
-        uses: gh-actions/create-release@v1.1
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.sha }}
-          release_name: Release ${{ github.sha }}
-          body: 'Release for commit ${{ github.sha }}'
-
-      - name: Upload release assets
-        uses: gh-actions/upload-release-asset@v1
-        with:
-          tag_name: ${{ github.sha }}
-          asset_path: ./bin/*
-          asset_name: ${{ github.sha }}.tar.gz
-          asset_content_type: application/gzip
+          files: ./bin/*
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
