--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,22 +3,24 @@ name: Go Build and Release
 on:
   push:
     tags:
-      - 'v*'  # Trigger on version tags
+      - 'v*'  # Trigger on version tags (比如 v1.2.3)
+    branches:
+      - main  # 在主分支的推送时也触发
   workflow_dispatch:
     inputs:
       tag_name:
         description: 'Tag name for the release'
         required: true
-        default: 'v1.0.0'  # 默认标签值
+        default: 'v1.2.3'  # 默认版本号
 
 permissions:
   contents: write  # Allow writing to GitHub releases
 
 env:
-  # 使用仓库名作为项目名
   PROJECT_NAME: ${{ github.event.repository.name }}
-  # 获取当前日期
-  BUILD_DATE: ${{ github.ref_name }}-${{ github.run_id }}
+  BUILD_DATE: ${{ github.run_id }}
+  VERSION: 'v0.0.1-beta-1'  # 固定版本号
+  RELEASE_DIR: release
 
 jobs:
   build:
@@ -40,57 +42,57 @@ jobs:
         run: go mod download
 
       - name: Prepare Release Directory
-        run: mkdir -p release
+        run: mkdir -p ${{ env.RELEASE_DIR }}
 
       # Build steps for different platforms
       - name: Build Linux AMD64
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
-            -ldflags="-X 'main.Version=${{ github.ref_name }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
-            -o release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_linux_amd64
+            -ldflags="-X 'main.Version=${{ env.VERSION }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
+            -o ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_linux_amd64
 
       - name: Build Linux ARM64
         run: |
           CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build \
-            -ldflags="-X 'main.Version=${{ github.ref_name }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
-            -o release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_linux_arm64
+            -ldflags="-X 'main.Version=${{ env.VERSION }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
+            -o ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_linux_arm64
 
       - name: Build Windows AMD64
         run: |
           CGO_ENABLED=0 GOOS=windows GOARCH=amd64 go build \
-            -ldflags="-X 'main.Version=${{ github.ref_name }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
-            -o release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_windows_amd64.exe
+            -ldflags="-X 'main.Version=${{ env.VERSION }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
+            -o ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_windows_amd64.exe
 
       - name: Build Windows ARM64
         run: |
           CGO_ENABLED=0 GOOS=windows GOARCH=arm64 go build \
-            -ldflags="-X 'main.Version=${{ github.ref_name }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
-            -o release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_windows_arm64.exe
+            -ldflags="-X 'main.Version=${{ env.VERSION }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
+            -o ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_windows_arm64.exe
 
       - name: Build macOS AMD64
         run: |
           CGO_ENABLED=0 GOOS=darwin GOARCH=amd64 go build \
-            -ldflags="-X 'main.Version=${{ github.ref_name }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
-            -o release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_darwin_amd64
+            -ldflags="-X 'main.Version=${{ env.VERSION }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
+            -o ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_darwin_amd64
 
       - name: Build macOS ARM64
         run: |
           CGO_ENABLED=0 GOOS=darwin GOARCH=arm64 go build \
-            -ldflags="-X 'main.Version=${{ github.ref_name }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
-            -o release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_darwin_arm64
+            -ldflags="-X 'main.Version=${{ env.VERSION }}' -X 'main.BuildDate=${{ env.BUILD_DATE }}'" \
+            -o ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_darwin_arm64
 
       # Create Source Code Tarball
       - name: Create Source Code Tarball
         run: |
-          tar -czvf release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_source.tar.gz \
+          tar -czvf ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_source.tar.gz \
           --exclude=.git \
-          --exclude=release \
+          --exclude=${{ env.RELEASE_DIR }} \
           .
 
       # Create Source Code Zip
       - name: Create Source Code Zip
         run: |
-          zip -r release/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_source.zip \
+          zip -r ${{ env.RELEASE_DIR }}/${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_source.zip \
           . \
           -x .git\* \
           -x release\*
@@ -98,7 +100,7 @@ jobs:
       # Generate SHA256 Checksums
       - name: Generate SHA256 Checksums
         run: |
-          cd release
+          cd ${{ env.RELEASE_DIR }}
           sha256sum * > ${{ env.PROJECT_NAME }}_${{ env.BUILD_DATE }}_checksums.txt
 
       # Create GitHub Release
@@ -107,9 +109,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: release/*
+          files: ${{ env.RELEASE_DIR }}/*
           generate_release_notes: true  # 自动生成发行说明
           draft: false  # 不创建草稿
           prerelease: false  # 不标记为预发布
-          tag_name: ${{ github.ref_name }}  # 使用推送的标签名称作为发布的标签
-
+          tag_name: ${{ env.VERSION }}  # 使用固定版本号作为发布标签
