BronyaBot: ✨ 新增 YAML 配置支持单用户任务，方便无数据库用户！    本次更新为工学云定时任务打卡功能带来了新的配置方式，主要改进如下：    *    **新增 YAML 文件配置：** 为没有数据库服务的用户提供了通过 YAML 文件配置账号密码等信息的功能，简化了部署流程。    *   ⚠️ **单用户加载限制：** 目前 YAML 配置仅支持加载单个用户的配置信息。如有需要，后续会考虑扩展支持多用户配置。    *    **互斥性：** 注意！开启本地 YAML 登录时，将无法使用数据库中配置的账号进行登录。两者互斥，请根据实际情况选择合适的配置方式。

--- a/configuration/application.yaml
+++ b/configuration/application.yaml
@@ -25,3 +25,20 @@ mail:
   local-home:         #可选
 ai:
   token: #使用讯飞星火大模型生成报告
+account:
+  gongxueyun: #对工学云单用户无数据库服务新开账号密码登录
+    off: true                                     #off: true or false 是否开启单用户加载，单用户加载开启时无法使用mysql数据
+    phone: "13888888888"                          #phone: 手机号码
+    password: "your_password"                     #password: 密码
+    country: "China"                              #country: 国家
+    province: "Beijing"                           #province: 省份
+    city: "Beijing"                               #city: 城市
+    area: "Chaoyang"                              #area: 地区
+    latitude: "39.929986"                         #latitude: 纬度
+    longitude: "116.465416"                       #longitude: 经度
+    email: "example@example.com"                  #email: 邮箱地址
+    address: "No. 1, Chaoyang District, Beijing"  #address: 详细地址
+    type: "home"                                  #type: 类型（例如：home、work）
+  cx:
+    phone:
+    password:
